# todo-fastApi

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todoConfig.conf
src/: main.py
src/auth/: models.py  routes.py  schema.py
src/core/: config.py  dependencies.py
src/db/: connection.py
src/migrations/: env.py
src/migrations/versions/: 8e9323b0cf2b_foreignkey_constraint_in_todoitem.py  a8050a30fc3a_initial_migration.py
src/todo/: models.py  routes.py  schema.py
